--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,18 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Node / Angular
+/frontend/node_modules
+/frontend/dist
+/frontend/coverage
+*.log
+
+# Python
+__pycache__/
+*.pyc
+.venv/
+/backend/.env
+
+# VSCode
+.vscode/
