chore: set up sql script to initialize with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     image: postgres:13 
     volumes:
       - postgres_data:/var/lib/postgresql/data/ 
+      - ./scripts/users.sql:/docker-entrypoint-initdb.d/users.sql
     ports:
       - "5432:5432"
     environment:
