--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
-POSTGRES_DB=parkinsondb
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=parkinson_check
