--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.12-slim
 
+RUN apt-get update && apt-get install -y \
+    libgl1 \
+    libglib2.0-0
+    
 WORKDIR /app
 
 COPY requirements.txt .
