--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^20.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "ngx-mask": "^20.0.0",
+    "opencv-ts": "^1.3.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
