--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,21 +5,18 @@ sqlalchemy
 psycopg2-binary
 pyjwt
 pwdlib[argon2]
-opencv-python
 tensorflow==2.16.2
-joblib
-scikit-learn
-joblib==1.5.2
+scikit-learn==1.7.2
 lightgbm==4.6.0
-numpy==2.2.6
-nvidia-nccl-cu12==2.28.3
-opencv-python==4.12.0.88
+xgboost==3.0.5
+joblib==1.5.2
+threadpoolctl==3.6.0
+numpy==1.26.4
+scipy==1.16.2
+six==1.17.0
 pandas==2.3.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
-scikit-learn==1.7.2
-scipy==1.16.2
-six==1.17.0
-threadpoolctl==3.6.0
 tzdata==2025.2
-xgboost==3.0.5
+opencv-python   # sem versão fixa!
+
