--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.12-slim
+FROM python:3.13-slim
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential \
     libgl1 \
     libglib2.0-0
-    
+
 WORKDIR /app
 
 COPY requirements.txt .
