--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,18 +5,10 @@ sqlalchemy
 psycopg2-binary
 pyjwt
 pwdlib[argon2]
-tensorflow==2.16.2
-scikit-learn==1.7.2
-lightgbm==4.6.0
-xgboost==3.0.5
-joblib==1.5.2
-threadpoolctl==3.6.0
-numpy==1.26.4
-scipy==1.16.2
-six==1.17.0
-pandas==2.3.2
-python-dateutil==2.9.0.post0
-pytz==2025.2
-tzdata==2025.2
-opencv-python   # sem versão fixa!
 
+# Dependências para o classificador com versões fixas
+opencv-python
+scikit-learn==1.7.2
+numpy==1.26.4
+joblib
+pandas
