refactor/spiral test (#22)
* fix: template name for expertise_area

* feat(spiral-test): add all models to directory and update requirements.txt

* refactor: fix versioning of libs on requirements.txt

* refactor: update spiral test model and imports

* refactor: change test schema/model

* feat: change display and processing of spiral image

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,10 @@ sqlalchemy
 psycopg2-binary
 pyjwt
 pwdlib[argon2]
+
+# Dependências para o classificador com versões fixas
 opencv-python
-tensorflow==2.16.2
+scikit-learn==1.7.2
+numpy==1.26.4
 joblib
-scikit-learn
+pandas
