feat: spiral practice as microservice and working :)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,10 +5,7 @@ sqlalchemy
 psycopg2-binary
 pyjwt
 pwdlib[argon2]
-
-# Dependências para o classificador com versões fixas
 opencv-python
-scikit-learn==1.7.2
-numpy==1.26.4
+tensorflow==2.16.2
 joblib
-pandas
+scikit-learn
