--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.12-slim
 
 RUN apt-get update && apt-get install -y \
     libgl1 \
-    libglib2.0-0
+    libglib2.0-0 \
+    ffmpeg
 
 WORKDIR /app
 
