feat: add domain on allowed hosts

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -63,7 +63,7 @@
             }
           },
           "options": {
-            "proxyConfig": "proxy.conf.json"
+            "allowedHosts": ["parkinson.gabi-alves.com"]
           },
           "defaultConfiguration": "development"
         },
