--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,16 @@
-# Estágio 1: Build da aplicação Angular
-FROM node:20 AS build
+FROM node:18 AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Estágio 2: Servir a aplicação com Nginx
 FROM nginx:alpine
+
+RUN rm -rf /usr/share/nginx/html/*
+
 COPY --from=build /app/dist/parkinson-check-app /usr/share/nginx/html
+
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
