--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,4 @@ DATABASE_URL="postgresql+psycopg://postgres:postgres@localhost:5432/parkinson_ch
 SECRET_KEY = "AQUI VAI A CHAVE SECRETA"
 ALGORITHM = "HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
+ENVIRONMENT = "development"
