feat: crud de notes com regras aplicadas

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ indent-style = "space"
 [tool.ruff.lint]
 preview = true
 select = ['I', 'F', 'E', 'W', 'PL']
+exclude = ["tests/**"]
 
 [tool.ruff.lint.pylint]
 max-args = 8
