fix: correção sql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     image: postgres:13
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-      - ./scripts/users.sql:/docker-entrypoint-initdb.d/users.sql
+      - ./scripts/init_database.sql:/docker-entrypoint-initdb.d/init_database.sql
     ports:
       - "5432:5432"
     environment:
