feat: reset password flow completed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,4 +6,4 @@ ENVIRONMENT = "development"
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=pcheck.noreply@gmail.com
-SMTP_PASSWORD=tcc_tads
+SMTP_PASSWORD=onbf lzht veco rijt
