--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,7 @@ SECRET_KEY = "AQUI VAI A CHAVE SECRETA"
 ALGORITHM = "HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
 ENVIRONMENT = "development"
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=pcheck.noreply@gmail.com
+SMTP_PASSWORD=onbf lzht veco rijt
