--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "chart.js": "^4.5.1",
+    "ng2-charts": "^8.0.0",
     "ngx-mask": "^20.0.0",
     "rxjs": "~7.8.0",
     "serve": "^14.2.5",
