--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,7 @@ DATABASE_URL="postgresql+psycopg://postgres:postgres@localhost:5432/parkinson_ch
 SECRET_KEY = "AQUI VAI A CHAVE SECRETA"
 ALGORITHM = "HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
+REMEMBER_ME_EXPIRE_DAYS = 30
 ENVIRONMENT = "development"
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
