fix: backend docker service variables stting fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,8 @@ services:
       - ./backend:/app:z
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      - SECRET_KEY=${SECRET_KEY}
-      - ALGORITHM=${ALGORITHM}
-      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES}
-      - ENVIRONMENT=${ENVIRONMENT}
-      - SMTP_HOST=${SMTP_HOST}
-      - SMTP_PORT=${SMTP_PORT}
-      - SMTP_USER=${SMTP_USER}
-      - SMTP_PASSWORD=${SMTP_PASSWORD}
+    env_file:
+    - ./backend/.env  
     depends_on:
       - db
       - spiral-classifier
