--- a/models/voice-classifier/Dockerfile
+++ b/models/voice-classifier/Dockerfile
@@ -17,4 +17,4 @@ COPY ./app ./app
 
 EXPOSE 8002
 
-CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8002"]
+CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "::", "--port", "8002"]
