--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,21 @@
-DATABASE_URL="postgresql+psycopg://postgres:postgres@localhost:5432/parkinson_check"
-SECRET_KEY = "AQUI VAI A CHAVE SECRETA"
-ALGORITHM = "HS256"
-ACCESS_TOKEN_EXPIRE_MINUTES = 30
-REMEMBER_ME_EXPIRE_DAYS = 30
-ENVIRONMENT = "development"
-FRONTEND_URL = "http://localhost:4200"
+DATABASE_URL=postgresql+psycopg://postgres:postgres@db:5432/parkinson_check
+SECRET_KEY=sua-chave-secreta-aqui
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REMEMBER_ME_EXPIRE_DAYS=30
+ENVIRONMENT=development
+FRONTEND_URL=http://localhost:4200
 
-# SMTP settings (for development)
+# SMTP settings (para envio de emails em desenvolvimento)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=pcheck.noreply@gmail.com
-SMTP_PASSWORD=xxxx xxxx xxxx xxxx
+SMTP_USER=seu-email@gmail.com
+SMTP_PASSWORD=sua-senha-de-app
 
-# Resend settings (for production)
+# Resend settings (para produção - opcional)
 # RESEND_API_KEY=re_xxxxxxxx
 # RESEND_FROM_EMAIL=noreply@seu-dominio.com
+
+# URLs dos serviços de ML (opcional - padrão usado pelo docker-compose)
+# SPIRAL_CLASSIFIER_URL=http://spiral-classifier:8001
+# VOICE_CLASSIFIER_URL=http://voice-classifier:8002
